# Dart_W26_A115_Project

./: .gitignore  Readme.md  pyproject.toml  requirements.txt
.github/: pull_request_template.md
docs/: directory_structure.md
docs/interfaces/: transport.md
modules/eos/: eos_functions.py  testing.py
sixseven/eos/: eos_functions.py  testing.ipynb  testing.py
sixseven/nuclear/: README.txt  nuc_burn.py  scratch.py  test.py
sixseven/radiation/: radiate.py
sixseven/timestep/: testing.py  timestep.py
sixseven/transport/: README.TXT  diffusion.py  testing.py
