[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sixseven"
version = "0.1.0"

description = "Basic, 1D, stellar structure and evolution program developed as a class project."
authors = [
    {name = "Emily Boudreaux", email="Emily.Boudreaux@dartmouth.edu"},
    {name = "Sasha Campana", email="sasha.n.campana.gr@dartmouth.edu"},
    {name = "George Dufresne", email="George.E.Dufresne.GR@dartmouth.edu"},
    {name = "Guinevere Herron", email="guinevere.herron.gr@dartmouth.edu"},
    {name = "Cassie Metzger", email="cassidy.m.metzger.gr@dartmouth.edu"},
    {name = "Artemis Theodoridis", email="artemis.t.theodoridis.gr@dartmouth.edu"},
    {name = "Benjamin Velguth", email="benjamin.n.velguth.gr@dartmouth.edu"}
]

requires-python = ">=3.8"
dependencies = [
    "astropy==7.2.0",
    "astropy-iers-data==0.2026.1.12.0.42.13",
    "contourpy==1.3.3",
    "cycler==0.12.1",
    "fonttools==4.61.1",
    "kiwisolver==1.4.9",
    "matplotlib==3.10.8",
    "numpy==2.4.1",
    "packaging==25.0",
    "pillow==12.1.0",
    "pyerfa==2.0.1.5",
    "pyparsing==3.3.1",
    "python-dateutil==2.9.0.post0",
    "PyYAML==6.0.3",
    "setuptools==80.9.0",
    "six==1.17.0",
    "wheel==0.45.1",
    "scipy==1.17.0",
]

[tool.setuptools]
packages = ["sixseven"]